--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Nishigandha!</span>
+                <span id="name">Nishi!</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
