--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="six">
-            <img src="img/WhatsApp Image 2024-06-08 at 21.21.07_94d67940.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="WhatsApp Image 2024-08-29 at 23.21.55_a8c8da23.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday Nishee!</h3>
